--- a/package.json
+++ b/package.json
@@ -112,5 +112,18 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "optionalDependencies": {
+    "@swc/core": "^1.3.100",
+    "@swc/core-darwin-arm64": "^1.3.100",
+    "@swc/core-darwin-x64": "^1.3.100",
+    "@swc/core-linux-arm-gnueabihf": "^1.3.96",
+    "@swc/core-linux-arm64-gnu": "^1.3.100",
+    "@swc/core-linux-arm64-musl": "^1.3.100",
+    "@swc/core-linux-x64-gnu": "^1.3.100",
+    "@swc/core-linux-x64-musl": "^1.3.100",
+    "@swc/core-win32-arm64-msvc": "^1.3.100",
+    "@swc/core-win32-ia32-msvc": "^1.3.100",
+    "@swc/core-win32-x64-msvc": "^1.3.100"
+  }
 }
