--- a/package.json
+++ b/package.json
@@ -9,13 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.5.2",
+    "@fortawesome/free-brands-svg-icons": "^6.5.2",
+    "@fortawesome/free-solid-svg-icons": "^6.5.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "bootstrap": "^5.3.3",
     "jquery": "^3.7.1",
     "next": "14.2.3",
     "react": "^18",
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18",
-    "sass": "^1.77.4"
+    "sass": "^1.77.4",
+    "sharp": "^0.33.4"
   },
   "devDependencies": {
     "@types/node": "^20",
