--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "iamboyowa",
+  "name": "bringerofjoyart",
   "version": "0.1.0",
   "private": true,
   "type": "module",
@@ -16,7 +16,7 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "bootstrap": "^5.3.3",
     "jquery": "^3.7.1",
-    "next": "14.2.3",
+    "next": "^14.2.31",
     "react": "^18",
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18",
